<resources>
    <string name="app_name">Teacher Tracker</string>
    <string name="cse">CSE</string>
    <string name="automotive">Automotive</string>
    <string name="bca">BCA</string>
    <string name="civil">Civil</string>
    <string name="ece">ECE</string>
    <string name="it">IT</string>
    <string name="mail">Wiliam@gmail.com</string>
    <string name="number">+266 225 225</string>
    <string name="desc">Image</string>
    <string name="set">SET STATUS</string>
    <string name="view">View</string>
    <string name="teach">Teacher Name</string>
    <string name="teacher_time_table">Select You Teacher</string>
    <string name="situm_user">dexterslab2595@gmail.com</string>
    <string name="situm_api">48f9726828b5dc87c3f2b4c76d038fc2dce6194c6ac6c281e1fc1714aa60e977</string>


</resources>
